<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tuter</string>
    <string name="tuter_catchphrase">The Ultimate Tutor Finder</string>
    <string name="tuter_version">v1.0</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="welcome_welcomeText">Welcome</string>
    <string name="welcome_logIn">Log In</string>
    <string name="welcome_signUp">Sign Up</string>
    <string name="welcome_search">Search</string>
    
    <!-- SearchActivity Strings -->
    <string name="search_courseLabel">Course</string>
    <string name="search_courseHint">Course (e.g. MATH 211)</string>
    <string name="search_locationLabel">Location</string>
    <string name="search_locationHint">Location (e.g. Helen C. White)</string>
    <string name="search_volunteerLabel">Volunteer</string>
    <string name="search_paidLabel">Paid</string>
    <string name="search_searchButton">Search</string>
    <string name="searchResults_results">Results</string>
    
    <string name="title_activity_search">Search Tutors</string>
    <string name="action_settings">Settings</string>
    
    <!-- SearchResultsActivity Strings -->
    <string name="title_activity_search_results">Search Results</string>
    
    
    <string name="title_activity_google_map_v2">GoogleMapV2</string>
    
    <!-- LogInActivity and SignUpActivity Strings -->
    <string name="prompt_email">Email</string>
    <string name="prompt_reenterPassword">Confirm Password</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register">Log in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="signup_checkbox_student">Student</string>
    <string name="signup_checkbox_tutor">Tutor</string>
    <string name="signup_im_a">I\'m a</string>

    
	<!-- Dummy Text -->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
</resources>