<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@color/tuter_blue" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:contentDescription="@+string/Tuter"
            android:gravity="center_horizontal"
            android:src="@drawable/tuter_title" >

        </ImageView>
    </LinearLayout>
    
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="12dp">
       	<Button
	        android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/welcome_searchButton"
       	    android:text="@string/welcome_search"></Button>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
       	<Button
	        android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/welcome_logInButton"
            android:layout_weight="1"
       	    android:text="@string/welcome_logIn"></Button>
       	<Button
	        android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:id="@+id/welcome_signUpButton"
       	    android:text="@string/welcome_signUp"></Button>
       	</LinearLayout>
    </LinearLayout>
        

</RelativeLayout>